[tool.poetry]
name = "anyqa"
version = "0.1.0"
description = ""
authors = ["Taylor Agarwal <taylor.agarwal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.20"
chromadb = "^0.5.0"
sentence-transformers = "^2.7.0"
unstructured = "^0.14.0"
fake-useragent = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"

[tool.ruff]
line-length = 150

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
